# Cohort-Component-Model

./: .gitattributes  .gitignore  README.md  config.JSON  config.yml  environment.yml  main.py  pyproject.toml  rates_map.JSON  rates_map.yml  sandag_estimates.JSON  sandag_estimates.yml
.github/: PULL_REQUEST_TEMPLATE.md
data/: DMDC Website Location Report.csv  SDMAC Report.csv  Social Security Actuarial Life Table.csv  migration_controls_template.csv
python/: active_duty_military.py  annual_cycle.py  base_yr.py  birth_rates.py  calculate_population.py  death_rates.py  etl.py  formation_rates.py  hh_characteristics_rates.py  migration_rates.py  output_data.py  parsers.py  utilities.py  utils.py
python/input_modules/: active_duty_military.py  base_yr.py  birth_rates.py  death_rates.py  formation_rates.py  hh_characteristics_rates.py  migration_controls.py  migration_rates.py
report/: CCM_Validation_Report.py  ccm_report.py  components.sql  metadata.sql  population.sql  rates.sql  report.py  report_utils.py  utils.py
report/pages/: 3_Rates.py  (+2 more)
sql/: acs5yr_pums_ca_mil.sql  acs5yr_pums_migrants.sql  acs5yr_pums_persons.sql  census_p5.sql  census_redistricting.sql  dof_estimates.sql  dof_projections.sql  pums_ca_mil.sql  pums_migrants.sql  pums_persons.sql
wiki/: Active‐Duty-Military.md  Base-Year-Population.md  Birth-Rates.md  Components-of-Change.md  Control-Population.md  Death-Rates.md  Formation-Rates.md  Home.md  Household-Characteristics-Rates.md  Integerization-and-Reallocation.md  Migration-Rates.md  Model-Outputs.md  Population-Calculator.md  _Sidebar.md
(+1780 files in other folders)
