[project]
name = "Cohort-Component-Model"
version = "0.0.0"  # not used
requires-python = ">=3.11"
dependencies = [
    "black>=26.3.1,<27.0.0",
    "numpy>=2.4.4,<3.0.0",
    "pandas>=3.0.2,<4.0.0",
    "plotly>=6.7.0,<7.0.0",
    "pymssql>=2.3.13,<3.0.0",
    "pyyaml>=6.0.3,<7.0.0",
    "scipy>=1.17.1,<2.0.0",
    "streamlit>=1.56.0,<2.0.0",
    "sqlalchemy>=2.0.49,<3.0.0",
]