[project]
name = "Cohort-Component-Model"
version = "0.0.0"  # not used
requires-python = ">=3.11"
dependencies = [
    "black>=26.5.1,<27.0.0",
    "numpy>=2.4.6,<3.0.0",
    "openpyxl>=3.1.5,<4.0.0",
    "pandas>=3.0.3,<4.0.0",
    "plotly>=6.7.0,<7.0.0",
    "pymssql>=2.3.13,<3.0.0",
    "pyyaml>=6.0.3,<7.0.0",
    "scipy>=1.17.1,<2.0.0",
    "streamlit>=1.57.0,<2.0.0",
    "sqlalchemy>=2.0.49,<3.0.0",
]